--- a/dist.ini
+++ b/dist.ini
@@ -1,44 +1,46 @@
-name              = Filter-Template
+name = Filter-Template
 
-author            = Rocco Caputo <rcaputo@cpan.org>
-copyright_holder  = Rocco Caputo <rcaputo@cpan.org>
-license           = Perl_5
+author           = Rocco Caputo <rcaputo@cpan.org>
+copyright_holder = Rocco Caputo <rcaputo@cpan.org>
+license          = Perl_5
 
-[Prereqs]
-Filter::Util::Call = 1.06
-
-[MetaResources]
-bugtracker.mailto = bug-filter-template@rt.cpan.org
-bugtracker.web    = http://rt.cpan.org/Public/Dist/Display.html?Name=Filter-Template
-homepage          = http://search.cpan.org/dist/Filter-Template
+[AutoMetaResources]
+bugtracker.rt     = 1
 license           = http://dev.perl.org/licenses/
-repository.type   = git
-repository.url    = git://github.com/rcaputo/filter-template
-repository.web    = http://github.com/rcaputo/filter-template
+repository.github = user:rcaputo
 
-[Repository]
-git_remote = gh
+[AutoPrereqs]
+[CheckPrereqsIndexed]
+[Prereqs::MatchInstalled::All]
+exclude = bytes
+exclude = constant
+exclude = lib
+exclude = perl
+exclude = strict
+exclude = vars
+exclude = warnings
+
+[Homepage]
 
 [ReadmeFromPod]
 [ReadmeMarkdownFromPod]
 [ReportVersions]
 
-; Require everything to be checked in.
-; Must exclude tarball directories from .gitignore.
+[Repository]
+git_remote = gh
+
 [Git::Check]
 
-; Calculate the release version.
 [Git::NextVersion]
 first_version  = 1.041
 version_regexp = ^v(\d+\.\d+)$
 
-; Generate the changelog.
 [ChangelogFromGit]
 tag_regexp = v(\d+[_.]\d+)
 
-; Tag the repository after release.
 [Git::Tag]
 tag_format  = v%v
 tag_message = Release %v.
 
 [@Classic]
+[MetaJSON]
